# sui-sentinal

./: .gitignore  .http  Containerfile  Makefile  MyEC2KeyPair.pem  README copy.md  README.md  SuiSentinal.md  UsingNautilus.md  configure_enclave.sh  consume_prompt.sh  expose_enclave.sh  register_agent.sh  script.sh
frontend/: bun.lockb  constants.ts  package.json  tailwind.config.ts  types.ts
frontend/app/: globals.css  layout.tsx  page.tsx  providers.tsx
frontend/components/: AgentChat.tsx  AgentHistory.tsx  AgentInfo.tsx  AgentLaunchSuccessModal.tsx  AgentListView.tsx  AgentStates.tsx  AgentsList.tsx  AttackStatusModal.tsx  AttackerIdentifier.tsx  AttackersList.tsx  BlockieAvatar.tsx  ChallengeSuccessModal.tsx  ConnectButton.tsx  ConnectPrompt.tsx  CountdownTimer.tsx  DefenderSuccessModal.tsx  Dialog.tsx  Footer.tsx  FundAgentModal.tsx  Header.tsx  LandingPage.tsx  LauchMainnetBanner.tsx  MenuItems.tsx  StatSkeleton.tsx  Stats.tsx  StatusDisplay.tsx  Tooltip.tsx  TweetPreview.tsx
frontend/hooks/: useAddFunds.ts  useAgent.ts  useAgentEvents.ts  useAgentObjectIds.ts  useAgentObjectNames.ts  useAgents.ts  useAgentsContract.ts  useAllAgents.ts  useAttackers.ts  useConsumePrompt.ts  useFundAgent.ts  useFundAgentModal.tsx  usePagination.ts  useTokenCount.ts  useUsageStats.ts
frontend/lib/: debug.ts  sui-utils.ts  utils.ts
frontend/mock-data/: index.ts  mock_data.js
move/app/: Move.toml
src/nautilus-server/: Cargo.toml  allowed_endpoints.yaml  run.sh
src/nautilus-server/src/: app.rs  claude.rs  common.rs  lib.rs  main.rs  models.rs
(+21 files in other folders)
